--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,12 @@ dependencies:
   cloud_firestore: ^3.1.13
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.13
+  firebase_storage: ^10.2.15
+  flutter_tex: ^4.0.3+4
 
 
 dev_dependencies:
+  font_awesome_flutter: ^10.1.0
   flutter_test:
     sdk: flutter
 
@@ -52,16 +55,17 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
+  assets:
+    - assets/images/
+    - assets/subjects/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
